--- a/subpages/dbcss.css
+++ b/subpages/dbcss.css
@@ -609,7 +609,7 @@ img{
 #sec3,
 #sec5 {
     height: auto;
-    background: #eee;
+    background: #f2f2f2;
     color: #1a1a1a;
     padding-bottom: 60px;
 }
@@ -617,9 +617,11 @@ img{
 #sec3 {
     z-index: 3;
 }
+
 #sec4 {
-    background: white;
+    background-color: white;
 }
+
 #sec6-sub,
 #sec8 {
     padding-bottom: 100px;
