--- a/subpages/siemenscss.css
+++ b/subpages/siemenscss.css
@@ -115,6 +115,8 @@ strong {
     z-index: 8;
     text-align: center;
     overflow-x: hidden;
+    overflow-y: visible;
+    height: 100px;
     font-size: 32px;
 }
 
@@ -122,7 +124,7 @@ strong {
 .nav-ul {
     border: none;
     background: rgba(1, 1, 1, 0);
-    float: left
+    float: left;
 }
 
 .sec1nav {
