--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -250,7 +250,7 @@ footer{
 	padding-left: 10px;
 	font-size:20px;
 	margin:0;
-	width:175px;
+	width:180px;
 	opacity:0;
 	color:#f5f5f5;
 	z-index:7
@@ -553,8 +553,8 @@ footer{
 .animated-fast2 {
   -webkit-animation-duration: 0.3s;
   animation-duration: 0.3s;
-  -webkit-animation-fill-mode: both ease-in;
-  animation-fill-mode: both ease-in;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 .animated-slow {
   -webkit-animation-duration: 2s;
@@ -745,42 +745,54 @@ footer{
 	text-align:center;
 	z-index:10;
 }
-@media(max-width:1024px) {
-	.preloader-wrapper{
-		display:none
-	}
-}
-.preloader-wrapper img{
-	position:relative;
-	float:left;
-	left:-20px;
-	top:-25px;
-	width:80%;
-	height:auto;
+
+.preloader-wrapper{
+    display:none
 }
 @media(min-width:1024px) {
+    .preloader-wrapper{
+        display: block;
+    }
 	.preloader-wrapper img{
+        position:absolute;
 		height:250px;
 		width:auto;
-		margin-top:17%;
-		float:left;
+        top:45%;
 		left: 50%;
-		-webkit-transform: translate(-55%,0);
-		-o-transform: translate(-55%,0); 
-		-moz-transform: translate(-55%,0);
-		transform: translate(-55%,0);
+		-webkit-transform: translate(-53%,-50%);
+		transform: translate(-53%,-50%);
 	}
 }
 .preloader-button-wrapper{
 	position:relative;
 	width:100%;
-	top:40%;
-	text-align:center
+	top:53%;
+	left: 50%;
+    -webkit-transform: translate(-50%,0);
+    transform: translate(-50%,0);
+	height:50px;
+    color: #1a1a1a;
 }
 .preloader-button{
-	border:solid 1px #f5f5f5;
-	padding:0;
+    position: absolute;
+	border:solid 1px #666;
+    background-color: #1a1a1a;
+    width: 36%;
+	font-size:20px;
+	padding-top: 5px;
+	border-radius:2px;
+	height:50px;
+    color: #666;
+    left: 32%;
 	display:none
+}
+.preloader-button:hover{
+	border:solid 1px #f5f5f5;
+    color: #f5f5f5;
+}
+.preloader-button:focus{
+	border:solid 1px #f5f5f5;
+    color: #f5f5f5;
 }
 /*=================================================================
 	sec1
@@ -902,15 +914,28 @@ footer{
     transition: all 0.2s ease;
 }
 .tooltip > .tooltip-inner {
-      background-color: #666; 
+      background-color: transparent; 
       color: #f5f5f5;
       font-size: 16px;
-    padding: 5px 15px;
+    padding: 6px 0 8px 0;
     border: 1px solid #666; 
+    border-radius: 2px
   }
 .tooltip.bottom > .tooltip-arrow {
       border-bottom: 5px solid #666;
   }
+
+.sec1-p-span + .tooltip > .tooltip-inner {
+    max-width: 230px;
+    width: 230px;
+}
+
+.sec1-p-span + .tooltip > .tooltip-inner {
+    max-width: 230px;
+    width: 230px;
+}
+
+
 .chu-down{
 	position:absolute;
 	bottom:-30px;
@@ -934,7 +959,11 @@ footer{
 ==================================================================*/
 #sec2{
 	position:relative;
-	background-color:rgba(255,255,255,0.97);
+	background-color:#001F51;
+    background-image: url(../imgs/portfolio/sec2bg.gif);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 	z-index:2
 }
 #sec2-content{
@@ -954,8 +983,8 @@ footer{
 }
 .slid-wrapper img{
 	position:relative;
-	height:100%;
-	width:auto;
+	height:500px;
+	width:500px;
 	margin:0;
 	padding:0;
 	border:none;
@@ -967,7 +996,7 @@ footer{
 	margin:0;
 	padding:0;
 	width:100%;
-	height:600px;
+	height:100%;
 	-webkit-transition: all 1s ease-in;
        -moz-transition: all 1s ease-in;
         -ms-transition: all 1s ease-in;
@@ -978,11 +1007,10 @@ footer{
 	background: rgba(255,255,255,0.8);
 }
 .lighter-gradient{
-	background: rgba(255,255,255,0.5); /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1)); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(rgba(255,255,255,0.1), rgba(255,255,255,1));
+	background: rgba(255,255,255,0.5); 
+    /*
+    background: -webkit-linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,1));
+	background: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,1));*/
 }
 #sec2-content .row{
 	position: relative;
@@ -1014,21 +1042,24 @@ footer{
 }
 .aboutright {
 	position:absolute;
-	margin: auto 5% 5% 40%;
-    padding:0;
-	top:450px;
-	border-radius:5px;
-	background: rgba(255,255,255,0.3); /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.9)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.9)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.9)); /* For Firefox 3.6 to 15 */
-	background: linear-gradient(rgba(255,255,255,0.3), rgba(255,255,255,0.9));
+	margin: 0 5% 0 40%;
+    padding-bottom:60px;
+	bottom:0;
+    -webkit-transform: translateY(calc(100% - 75px));
+    transform: translateY(calc(100% - 75px));
+	border-radius:4px;
+    background-color: #f5f5f5;
+    box-shadow: 0 1px 8px rgba(0,0,0,.5);
+    /*
+	background: rgba(255,255,255,0.8);
+    background: -webkit-linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.9));
+	background: linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.9));*/
 }
 .aboutright h1 {
     text-transform: uppercase;
 }
 .aboutright-inner {
-    margin: 0 5% 0 5%;
+    margin: 0 5%;
 }
 .aboutright-inner p {
 	font-size:20px;
@@ -1065,7 +1096,25 @@ footer{
 	font-weight:bold;
     margin: 10px 0 30px;
 }
+.aboutright .aboutright-up-icon{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 20px;
+    color: inherit;
+}
+
+.aboutright:hover {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+}
+.aboutright:hover .aboutright-up-icon{
+    display: none
+}
 @media(max-width:768px) {
+    #sec2{
+        background-image: none;
+    }
 	.slid-wrapper,
 	.sec2mask,
 	.leftimg{
@@ -1075,13 +1124,19 @@ footer{
 		padding:0
 	}
 	.aboutright{
-		position:relative;
-		margin-left:0;
+        position: relative;
+		margin:0;
 		top:0;
+        height: 100%;
+        width: 100%;
 		padding: 20px 0 0 0;
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
 	}
+    .aboutright .aboutright-up-icon{
+        display: none
+    }
 	.aboutright-inner {
-		width:100%;
 		padding: 0 15px 100px 15px;
 	}
 	.aboutright-inner p{
