--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -1011,11 +1011,11 @@ footer{
 ==================================================================*/
 #sec2{
 	position:relative;
-	background-color:#001F51;
-    background-image: url(../imgs/portfolio/sec2bg.gif);
+	/*background-color: #001F51;*/
+    /* background-image: url(../imgs/portfolio/sec2bg.gif);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: contain;
+    background-size: contain; */
 	z-index:2
 }
 #sec2-content{
@@ -1075,35 +1075,40 @@ footer{
 @media(min-width:768px) {
 	#sec2-content .row{
 		position: absolute;
-		overflow:hidden
+		overflow:hidden;
+		display: flex;
+		align-items: center
 	}
 }
 .leftimg{
-	position:relative;
-	margin-top:10%;
+	position: absolute;
+	width:100%;
+	height:100%
+	/* margin-top:10%;
 	margin-left:5%;
 	height:95%;
 	width:auto;
 	float:left;
-	overflow:hidden
+	overflow:hidden */
 }
 .leftimg img{
 	height:100%;
-	width: auto;
-	margin:0;
+	position: absolute;
+	right: 0
 }
 .aboutright {
-	position:absolute;
-	margin: 0 5% 0 40%;
-    padding-bottom:60px;
-	bottom:0;
+	margin-left: 3%;
+	max-width: 60%;
+	padding-bottom:60px;
+	/* bottom:0;
     -webkit-transform: translateY(calc(100% - 75px));
     transform: translateY(calc(100% - 75px));
-	border-radius:4px;
+	border-radius:4px; 
     background-color: #f5f5f5;
     box-shadow: 0 1px 8px rgba(0,0,0,.5);
     -webkit-transition: all 0.1s ease-out;
-    transition: all 0.1s ease-out;
+	transition: all 0.1s ease-out;*/
+	z-index: 1
     /*
 	background: rgba(255,255,255,0.8);
     background: -webkit-linear-gradient(rgba(255,255,255,0.8), rgba(255,255,255,0.9));
@@ -1182,7 +1187,8 @@ footer{
 		margin:0;
 		top:0;
         height: 100%;
-        width: 100%;
+		width: 100%;
+		max-width: 100%;
 		padding: 20px 0 0 0;
         -webkit-transform: translateY(0);
         transform: translateY(0);
