--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -831,7 +831,7 @@ footer{
 	padding-top: 5px;
 	border-radius:2px;
 	height:50px;
-    color: #ddd;
+    color: #777;
 }
 .preloader-button:hover{
 	border:solid 1px #f5f5f5;
