--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -87,6 +87,7 @@ hr{
 }
 
 .btn1 {
+	position:relative;
     color: #666;
 	font-size:20px;
 	padding-top: 10px;
@@ -96,6 +97,11 @@ hr{
 	width:300px;
 	height:50px;
 	max-width: 100%;
+	-webkit-transition:0.1s ease-out;
+	transition:0.1s ease-out;
+}
+.btn1:hover{
+	box-shadow: 0 5px 10px #ccc;
 }
 
 .btn1.focus,
