--- a/css/chu-custom.css
+++ b/css/chu-custom.css
@@ -205,12 +205,12 @@ footer{
 }
 .sec1nav-brand{
 	position:relative;
-	height:1em;
+	height:100px;
 	top:0;
 	text-transform: uppercase;
 	padding:0;
 	margin:0;
-    z-index: 3;
+	z-index: 3;
 }
 .sec1nav-brand,
 .sec1nav-brand a,
@@ -248,16 +248,18 @@ footer{
 	overflow:hidden
 }
 .dd{
+	float: none !important;
 	position:absolute;
 	display:none;
 	top:60px;
+	left: 20px;
 	padding-left: 10px;
 	font-size:20px;
 	margin:0;
 	width:90px;
 	opacity:0;
 	color:#f5f5f5;
-	z-index:7
+	z-index:7;
 }
 
 .nav-img-wrapper{
