--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
     box-sizing: border-box;
 }
 
+a, a:focus, a:visited {
+    display: inline-block;
+    text-decoration: none;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
+    font-size: 16px;
 }
