--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,13 +5,23 @@
     top: 0;
     left: 0;
     width: 100%;
+    height: 5.3125rem;
     color: $palette-white;
     background-color: $palette-black;
     z-index: 9;
     opacity: 0.9;
-    &.scrolled {
-        box-shadow: 0 1px 8px #4b4b4b;
-    }
+    transition-property: height;
+    transition-duration: 0.1s;
+    overflow: hidden;
+}
+
+.nav.scrolled {
+    height: 0;
+}
+
+.nav.stuck{
+    overflow: visible;
+    height: auto;
 }
 
 .nav-container {
@@ -39,13 +49,13 @@
         position: relative;
         animation: none;
         opacity: 1;
-        font-size: 2rem;
         padding: 0;
         height: 5.3125rem;
 
         .logo-text {
             position: relative;
             width: 3rem;
+            font-size: 2rem;
             animation-name: shrink;
             animation-duration: 0.1s;
             animation-timing-function: ease-in-out;
@@ -94,6 +104,11 @@
     a {
         width: 100%;
         height: 100%;
+        padding: 0;
+        text-transform: capitalize;
+        font-size: 1rem;
+        line-height: 1.3;
+        vertical-align: top;
     }
 
     a:hover {
@@ -113,9 +128,9 @@
 }
 
 @keyframes logoFadeInUp {
-    0% {opacity: 0;transform: translate(-50%, -30%);width: 80px;height: 4rem;border-width: 1px;}
-    90% {opacity: 1;transform: translate(-50%, -50%);width: 80px;height: 4rem;border-width: 1px;}
-    100% {opacity: 1;transform: translate(-50%, -50%);width: 65px;height: 3.2rem;border-width: 2px;}
+    0% {opacity: 0;width: 80px;height: 4rem;border-width: 1px;}
+    90% {opacity: 1;width: 80px;height: 4rem;border-width: 1px;}
+    100% {opacity: 1;width: 65px;height: 3.2rem;border-width: 2px;}
 }
 
 @keyframes shrink {
