Header new scroll effect, preloader ui update

--- a/src/components/Preloader/Preloader.scss
+++ b/src/components/Preloader/Preloader.scss
@@ -132,5 +132,5 @@ a.btn {
 
 @keyframes fadeOutUpRight {
     0% {opacity: 1;transform: translate(0)}
-    100% {opacity: 0;transform: translate(10px, -10px)}
+    100% {opacity: 0;transform: translate(30px,0)}
 }
