--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -21,7 +21,7 @@
 
 .nav.stuck{
     overflow: visible;
-    height: auto;
+    height: 26.5625rem;
 }
 
 .nav-container {
@@ -113,6 +113,70 @@
 
     a:hover {
         color: $palette-white;
+    }
+}
+
+.nav-hamburger {
+    cursor: pointer;
+    position: absolute;
+    right: 1.5rem;
+    top: 2rem;
+    height: 1.2rem;
+    width: 1.5rem;
+    z-index: 999;
+
+    .nav-hamburger-bars {
+        width: 100%;
+        height: 3px;
+        margin: 8px 0;
+        background-color: $palette-white;
+        position: relative;
+        transition: background-color 320ms ease-in-out;
+
+        &::before,
+        &::after {
+            content: " ";
+            display: block;
+            width: 100%;
+            height: 3px;
+            background-color: $palette-white;
+            position: absolute;
+            z-index: -1;
+            transition: transform 320ms ease-in-out, background-color 200ms ease-in-out;
+        }
+
+        &::before {
+            transform-origin: top right;
+            top: -8px;
+        }
+
+        &::after {
+            transform-origin: bottom right;
+            top: 8px;
+        }
+    }
+
+    @media (min-width: 600px) {
+        display: none;
+    }
+}
+
+.nav.stuck .nav-hamburger {
+    .nav-hamburger-bars {
+        background-color: transparent;
+
+        &::before,
+        &::after {
+            background-color: $palette-white;
+        }
+
+        &::before {
+            transform: rotate(45deg) translate(10px, 13px);
+        }
+
+        &::after {
+            transform: rotate(-45deg) translate(11px, -14px);
+        }
     }
 }
 
