--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -56,7 +56,7 @@
             position: relative;
             width: 3rem;
             font-size: 2rem;
-            animation-name: shrink;
+            animation-name: headerLogoShrink;
             animation-duration: 0.1s;
             animation-timing-function: ease-in-out;
             animation-delay: 0.9s;
@@ -178,26 +178,4 @@
             transform: rotate(-45deg) translate(11px, -14px);
         }
     }
-}
-
-@keyframes fadeInUp {
-    0% {opacity: 0;transform: translateY(20px)}
-    100% {opacity: 1;transform: translateY(0)}
-}
-
-@keyframes logoFadeInDown {
-    0% {opacity: 0;transform: translate(-50%, -10px)}
-    90% {opacity: 1;transform: translate(-50%, 0)}
-    100% {opacity: 1;transform: translate(-50%, 0)}
-}
-
-@keyframes logoFadeInUp {
-    0% {opacity: 0;width: 80px;height: 4rem;border-width: 1px;}
-    90% {opacity: 1;width: 80px;height: 4rem;border-width: 1px;}
-    100% {opacity: 1;width: 65px;height: 3.2rem;border-width: 2px;}
-}
-
-@keyframes shrink {
-    0% {width: 4rem}
-    100% {width: 2.7rem}
 }
