--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,6 +1,7 @@
 @import "../variable";
+@import "../animation";
 
-html, body, #root, section, .container {
+html, body, #root, section {
     position: relative;
     width: 100%;
     height: 100%;
@@ -10,21 +11,106 @@ body {
     overflow-y: auto;
 }
 
+.container {
+    position: relative;
+    width: 100%;
+}
+
+.visible {
+    opacity: 1 !important;
+}
+
 #sec1 {
     color: $palette-white;
     background-color: $palette-black;
     display: flex;
     align-items: flex-end;
     .container {
-        height: 500px;
+        padding: 7rem;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 800px;
     }
     h1 {
-        font-size: 52px;
+        font-size: 60px;
+        animation-name: fadeInUp;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+        animation-delay: 1.2s;
+        opacity: 0;
     }
-    p {
-        font-size: 24px;
+    p.contentText {
+        font-size: 28px;
+        line-height: 1.5;
+        color: $palette-grey-300;
+        animation-name: fadeInUp;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+        animation-delay: 1.4s;
+        opacity: 0;
+    }
+
+    p.ctaText {
+        font-size: 20px;
+        margin-top: 3rem;
+        animation-name: fadeInUp;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+        animation-delay: 3s;
+        opacity: 0;
+    }
+
+    #img-container{
+        position:relative;
+        height:200px;
+        display: inline-block;
+        text-align: center;
+        animation-name: fadeInUp;
+        animation-duration: 0.5s;
+        animation-timing-function: ease-in-out;
+        animation-fill-mode: forwards;
+        animation-delay: 1s;
+        opacity: 0;
+    }
+    #chu-logo{
+        width:180px;
+        height:auto;
+    }
+    #hand{
+        position:absolute;
+        left:50%;
+        margin-top:-50px;
+        margin-left:-150px;
+        opacity:0;
+        -webkit-transition: all 0.1s ease-in;
+        -moz-transition: all 0.1s ease-in;
+        -o-transition: all 0.1s ease-in;
+        transition: all 0.1s ease-in;
+    }
+    #hand img{
+        position:relative;
+        width:60px;
+        height:auto
+    }
+    #smile{
+        position:absolute;
+        left:50%;
+        margin-top:125px;
+        width:30px;
+        height:auto;
+        opacity:0;
+        transition: all 0.2s ease-in;
+        margin-top:165px;
+        width:50px;
+        height:auto;
+        transform:scaleY(-1);
+        margin-left:-25px;
     }
 }
+
 
 .slope {
     position: absolute;
