--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -22,14 +22,27 @@ body {
 
 #sec1 {
     color: $palette-white;
-    background-color: $palette-black;
     display: flex;
     align-items: flex-end;
+    background-image:url(/imgs/bgsec1.jpg);
+	background-size: cover;
+	background-repeat:no-repeat;
+
+    &::after {
+        position:absolute;
+        content: "";
+        margin:0;
+        padding:0;
+        width:100%;
+        height:100%;
+        background: linear-gradient($palette-black, rgba($palette-black, 0.9) 20%, rgba($palette-black, 0.6) 40%, rgba($palette-black, 0.4))
+    }
     .container {
         padding: 7rem;
         margin-left: auto;
         margin-right: auto;
-        max-width: 800px;
+        max-width: 1100px;
+        z-index: 1;
     }
     h1 {
         font-size: 60px;
@@ -43,7 +56,6 @@ body {
     p.contentText {
         font-size: 28px;
         line-height: 1.5;
-        color: $palette-grey-300;
         animation-name: fadeInUp;
         animation-duration: 0.5s;
         animation-timing-function: ease-in-out;
